fix hero image rendering on mobile

--- a/less/components/_hero-image.less
+++ b/less/components/_hero-image.less
@@ -3,25 +3,32 @@
   display: inline-block;
   margin-bottom: 2.5em;
 
-  &__caption{
-    color: #fff;
-    text-shadow: 0 1px 0 rgba(0,0,0,.2);
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 1em;
-    min-height: 4em;
-    background: linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,.7) 100%);
+  &__caption {
+    color: @text-color;
 
     p{
       font-size: 14px;
     }
   }
 
-  &__title{
+  &__title {
     font-size: 22px;
+    margin-top: 1em;
     text-transform: uppercase;
     font-family: @headings-font-family;
+  }
+
+  @media (min-width: @screen-sm-min) {
+    &__caption {
+      color: #fff;
+      text-shadow: 0 1px 0 rgba(0,0,0,.2);
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: 1em;
+      min-height: 4em;
+      background: linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,.7) 100%);
+    }
   }
 }
